--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babelify": "^6.3.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
     "bluebird": "^3.0.5",
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
