--- a/package.json
+++ b/package.json
@@ -7,5 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gaston": {
+    "index-path": "app/index.html",
+    "babel": {
+      "presets": [
+        "react"
+      ]
+    }
+  },
+  "devDependencies": {
+    "bulma": "0.0.16",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.1"
+  }
 }
