--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gaston",
-  "version": "0.29.10",
+  "name": "ready-set-go",
+  "version": "0.0.2",
   "preferGlobal": true,
-  "description": "buildtool for vigour-io",
+  "description": "dev tool",
   "main": "lib/index.js",
   "author": {
     "name": "Vigour.io",
@@ -13,8 +13,8 @@
     "url": "https://github.com/vigour-io/gaston.git"
   },
   "bin": {
-    "gaston": "bin/gaston",
-    "gastond": "bin/gastond"
+    "rsg": "bin/rsg",
+    "rsgd": "bin/rsgd"
   },
   "scripts": {
     "postinstall": "scripts/post-install.js",
@@ -52,7 +52,7 @@
     "multi-glob": "^1.0.1",
     "npmlog": "^1.2.1",
     "openurl": "^1.1.0",
-    "phantomjs": "1.9.7-15",
+    "promfs": "^1.0.0",
     "rimraf": "^2.4.4",
     "shelljs": "^0.5.3",
     "sinon": "^1.16.1",
@@ -65,7 +65,6 @@
     "uglifycss": "0.0.18",
     "update-notifier": "^0.5.0",
     "url": "^0.11.0",
-    "vigour-fs-promised": "^1.1.0",
     "watchify": "^3.3.1"
   },
   "bugs": {
